# basic_ml_api

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: dev-docker-cicd.yml  docker-cicd.yml
myapp/: main.py  monitor.py  resource_monitor.py
myapp/comm_/: prometheus_metric.py  tool_util.py
myapp/src/: main.py  model_manager.py  monitor.py  prometheus_metric.py
myapp/tests/: conftest.py  test_get_model.py  test_metrics.py  test_predict.py  test_predicy.py  test_upload_model.py
src/: config.py  main.py
src/api/: health.py  metrics.py  model_routes.py
src/common/: metrics.py  utils.py
src/core/: model_manager.py  monitor.py
tests/: conftest.py  test_get_model.py  test_health.py  test_metrics.py  test_predict.py  test_upload_model.py
