[tool.poetry]
name = "basic-ml-api"
version = "0.1.0"
description = ""
authors = ["sanghun9634"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.*"
tensorflow = "2.15.0"
Flask = "^3.0.2"
psutil = "5.9.8"
pytz = "^2024.2"
prometheus-client = "^0.21.0"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
