[project]
name = "basic-ml-api"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "pytz>=2025.2",
    "tensorflow==2.16.*",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "his-monitoring",
    "gunicorn>=22.0.0",
]
[tool.uv.sources]
his-monitoring = { git = "https://github.com/humaningansalam/his-monitoring.git", branch = "main" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.15.1",
]
